# companionmodel

./: .env.example  .gitignore  Caddyfile  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 20260318_0001_initial_schema.py  20260407_0002_conversation_state.py  20260407_0003_customer_portal.py  20260407_0004_clerk_cutover.py  20260408_0005_usage_economics_admin_clerk.py  20260408_0006_portal_initialization.py  20260409_0007_memory_relationships.py  20260409_0008_portal_parent_chat.py  20260409_0009_parent_chat_thread_history.py  (+3 more)
app/: __init__.py  main.py
app/admin/: dependencies.py
config/: defaults.yaml
docs/: admin-guide.md  architecture.md  backup-restore.md  env-reference.md  migration-notes.md  openai.md  postgres-pgvector.md  raspberry-pi.md  roadmap.md  safety.md  troubleshooting.md  twilio.md  webhook-dev.md
scripts/: __init__.py  backfill_clerk_identities.py  bootstrap_admin.py  docker-start.sh  export_backup.py  seed_defaults.py
tests/: conftest.py  test_ai_runtime.py  test_auth.py  test_config.py  test_db.py  test_elevenlabs_provider.py  test_human_likeness.py  test_human_likeness_service.py  test_jobs_scheduler.py  test_memory.py  test_openai_provider.py  test_portal_auth.py  test_portal_auth_pages.py  test_portal_billing.py  test_portal_child.py  test_portal_controls.py  test_portal_dashboard.py  test_portal_initialization.py  test_portal_memories.py  test_portal_parent_chat.py  test_portal_security.py  test_prompt.py  test_public_pricing.py  test_safety.py  test_schedule.py  test_twilio.py  test_usage_economics.py  test_voice.py
(+177 files in other folders)
